# axiom-core

./: .editorconfig  .foxguard.yml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.taskflow  README.md  SECURITY.md  cargo_check.txt  cargo_check3.txt  check_runtime3.txt  docker-compose.yml  replace_layer.py  replace_layer2.py  run_cargo_check.py  rustfmt.toml
crates/axiom-agent/: Cargo.toml  build.rs
crates/axiom-agent/src/: agent.rs  agent_manifest.rs  auto_agent.rs  builder.rs  error.rs  intent_router.rs  lib.rs  natural_signal.rs  prelude.rs  self_monitor.rs
crates/axiom-agent/tests/: integration.rs
crates/axiom-alert/: Cargo.toml
crates/axiom-alert/src/: alert.rs  governance.rs  kernel.rs  lib.rs  router.rs  silence.rs  store.rs  threshold.rs
crates/axiom-alert/tests/: alert_tests.rs
crates/axiom-api/: Cargo.toml
crates/axiom-api/src/: auth.rs  builder.rs  config.rs  lib.rs  logging.rs  middleware.rs
crates/axiom-api/tests/: integration_test.rs
crates/axiom-bench/: Cargo.toml
crates/axiom-bench/benches/: bus_dispatch.rs  entropy_governor.rs  mailbox_throughput.rs  message_passing.rs  sqlite_store.rs  witness_chain.rs
crates/axiom-bench/src/: common.rs  lib.rs  stress.rs
crates/axiom-cli/: Cargo.toml  build.rs
crates/axiom-core/: Cargo.toml  build.rs
crates/axiom-core/examples/: hello_cell.rs
crates/axiom-core/src/: axiom.rs  capability.rs  cell.rs  clock.rs  codec.rs  context.rs  entropy.rs  error.rs  gate.rs  id.rs  layer.rs  lens.rs  lib.rs  registry.rs  schema.rs  sealed.rs  signal.rs  version.rs  witness.rs
crates/axiom-core/tests/: architecture_conformance.rs  concurrency_tests.rs  error_path_tests.rs  integration_tests.rs  lens_tests.rs
crates/axiom-demo-taskflow/: Cargo.toml
crates/axiom-demo-taskflow/src/: agent_cell.rs  agent_host.rs  alert_bridge.rs  events.rs  health.rs  lenses.rs  lib.rs  llm_port.rs  main.rs  metrics.rs  pipeline.rs  plugin_host.rs  product_gateway.rs  run_log.rs  runtime_host.rs  store.rs  surface.rs  task_cell.rs  workbench.rs
crates/axiom-demo-taskflow/static/: ops.html
crates/axiom-demo-taskflow/tests/: commercial_admit_path.rs  handoff_path.rs  isa_discipline.rs  observability_path.rs  ops_shell_path.rs  push_path.rs  runtime_path.rs  surface_path.rs  write_path.rs
crates/axiom-distributed/: Cargo.toml
crates/axiom-distributed/examples/: distributed_cluster.rs
crates/axiom-distributed/src/: cluster.rs  discovery.rs  kernel.rs  lib.rs  node.rs  sync.rs  witness.rs
crates/axiom-distributed/tests/: cluster_tests.rs
crates/axiom-identity/: Cargo.toml
crates/axiom-identity/src/: agent.rs  identity.rs  kernel.rs  lib.rs  skill.rs
crates/axiom-identity/tests/: integration.rs
crates/axiom-isa/: Cargo.toml
crates/axiom-isa/src/: discipline.rs  error.rs  governor.rs  handoff.rs  journal.rs  lib.rs  primitives.rs
crates/axiom-kernel/: Cargo.toml  build.rs
crates/axiom-kernel/examples/: distributed_cluster.rs  guard_audit.rs  hello_cell.rs  plugin_hello_world.rs
crates/axiom-kernel/src/: axiom.rs  cell.rs  clock.rs  cluster.rs  codec.rs  context.rs  entropy.rs  error.rs  gate.rs  guard.rs  id.rs  layer.rs  lens.rs  lib.rs  registry.rs  sealed.rs  signal.rs  tool.rs  version.rs  witness.rs
crates/axiom-kernel/tests/: architecture_conformance.rs  cluster_tests.rs  composer_tests.rs  error_path_tests.rs  kernel_tests.rs  plugin_tests.rs  registry_tests.rs  sandbox_tests.rs
crates/axiom-llm/: Cargo.toml
crates/axiom-llm/src/: claude_provider.rs  client.rs  config.rs  credentials.rs  kernel.rs  lib.rs  mock.rs  openai_provider.rs  types.rs
crates/axiom-llm/tests/: integration.rs
crates/axiom-macros/: Cargo.toml  build.rs
crates/axiom-macros/src/: axiom.rs  capability.rs  cell.rs  error.rs  guard.rs  lens.rs  lib.rs  migration.rs  schema_version.rs  signal.rs  tool.rs  utils.rs
crates/axiom-macros/tests/: auto_injection_tests.rs  capability_tests.rs  integration.rs  lens_macro_tests.rs  trybuild.rs
crates/axiom-mcp/: Cargo.toml
crates/axiom-mcp/src/: client.rs  kernel.rs  lib.rs  protocol.rs  security.rs  server.rs  tools.rs
crates/axiom-mcp/tests/: integration.rs  security_tests.rs
crates/axiom-memory/: Cargo.toml
crates/axiom-memory/src/: item.rs  kernel.rs  lib.rs  memory.rs
crates/axiom-memory/tests/: integration.rs
crates/axiom-oversight/: Cargo.toml  build.rs
crates/axiom-oversight/src/: architecture_guardian.rs  compliance_guard.rs  entropy_governor.rs  error.rs  health.rs  intent_auditor.rs  interceptors.rs  kernel.rs  lib.rs  loop_detector.rs  meta_oversight.rs  prelude.rs  resource_manager.rs  startup.rs  supervisor.rs
crates/axiom-planner/: Cargo.toml  build.rs
crates/axiom-planner/src/: kernel.rs  lib.rs  plan_execute.rs  planner.rs  react.rs  step.rs
crates/axiom-planner/tests/: integration.rs
crates/axiom-plugin-example-wasm/: Cargo.toml
crates/axiom-plugin-example-wasm/src/: counter.rs  echo.rs  lib.rs  transformer.rs
crates/axiom-plugin-example-wasm/tests/: plugin_behaviour.rs
crates/axiom-plugin-test/: Cargo.toml
crates/axiom-plugin-test/src/: counter.rs  echo.rs  lib.rs
crates/axiom-plugin-test/tests/: plugin_behaviour.rs
crates/axiom-plugin-wasm-sdk/: Cargo.toml
crates/axiom-plugin-wasm-sdk/src/: lib.rs
crates/axiom-prompt/: Cargo.toml
crates/axiom-prompt/src/: error.rs  kernel.rs  lib.rs  registry.rs  template.rs
crates/axiom-prompt/tests/: integration.rs
crates/axiom-resilience/: Cargo.toml
crates/axiom-resilience/src/: bulkhead.rs  circuit.rs  lib.rs  rate_limit.rs  retry.rs
crates/axiom-runtime/: Cargo.toml  build.rs
crates/axiom-runtime/src/: bus.rs  constants.rs  constraint_validator.rs  dlq.rs  dlq_store.rs  entropy_gov.rs  entropy_interceptors.rs  guardian.rs  interceptors.rs  lib.rs  loop_detector.rs  mailbox.rs  runtime.rs  server.rs  supervisor.rs  (+1 more)
crates/axiom-store/: Cargo.toml  build.rs
crates/axiom-tool/: Cargo.toml
crates/axiom-viz/: Cargo.toml  build.rs
examples/quick-start/: Cargo.toml
tools/archcheck/: Cargo.toml  build.rs
(+290 files in other folders)
