[workspace]
members = [
    "crates/axiom-core",
    "crates/axiom-runtime",
    "crates/axiom-store",
    "crates/axiom-oversight",
    "crates/axiom-agent",
    "crates/axiom-viz",
    "crates/axiom-macros",
    "crates/axiom-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/arwei944/axiom-core"
description = "Axiom Core - Deterministic-first runtime architecture for reliable agentic systems with built-in Oversight, CLI, and complete agent toolkit"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
linkme = "0.3"
trybuild = "1"
ratatui = "0.29"
crossterm = "0.28"
regex = "1"

axiom-core = { path = "crates/axiom-core" }
axiom-runtime = { path = "crates/axiom-runtime" }
axiom-store = { path = "crates/axiom-store" }
axiom-oversight = { path = "crates/axiom-oversight" }
axiom-agent = { path = "crates/axiom-agent" }
axiom-viz = { path = "crates/axiom-viz" }
axiom-macros = { path = "crates/axiom-macros" }
