[workspace]
members = [
    "crates/axiom-core",
    "crates/axiom-kernel",
    "crates/axiom-isa",
    "crates/axiom-resilience",
    "crates/axiom-demo-taskflow",
    "crates/axiom-plugin-test",
    "crates/axiom-plugin-wasm-sdk",
    "crates/axiom-plugin-example-wasm",
    "crates/axiom-runtime",
    "crates/axiom-store",
    "crates/axiom-oversight",
    "crates/axiom-agent",
    "crates/axiom-viz",
    "crates/axiom-api",
    "crates/axiom-macros",
    "crates/axiom-cli",
    "crates/axiom-mcp",
    "crates/axiom-llm",
    "crates/axiom-tool",
    "crates/axiom-memory",
    "crates/axiom-planner",
    "crates/axiom-prompt",
    "crates/axiom-identity",
    "crates/axiom-bench",
    "crates/axiom-distributed",
    "crates/axiom-alert",
    "tools/archcheck",
    "xtask",
    "examples/quick-start",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Axiom Core Contributors"]
repository = "https://github.com/arwei944/axiom-kernel"
description = "Axiom Kernel - Deterministic-first runtime architecture for reliable agentic systems with built-in Oversight, CLI, and complete agent toolkit"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "fs", "io-util", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
blake3 = "1"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
linkme = "0.3"
trybuild = "1"
ratatui = "0.29"
crossterm = "0.28"
regex = "1"
parking_lot = "0.12"
dashmap = "5"
schemars = "0.8"
hex = "0.4"
bincode = "1"
prometheus = "0.14"
axum = "0.7"
proptest = "1"
loom = "0.7"
glob = "0.3"
toml = { version = "0.8", features = ["parse"] }
reqwest = { version = "0.12", features = ["json"] }

axiom-core = { path = "crates/axiom-core" }
axiom-runtime = { path = "crates/axiom-runtime" }
axiom-store = { path = "crates/axiom-store" }
axiom-oversight = { path = "crates/axiom-oversight" }
axiom-agent = { path = "crates/axiom-agent" }
axiom-viz = { path = "crates/axiom-viz" }
axiom-macros = { path = "crates/axiom-macros" }
axiom-llm = { path = "crates/axiom-llm" }
axiom-tool = { path = "crates/axiom-tool" }
axiom-memory = { path = "crates/axiom-memory" }
axiom-planner = { path = "crates/axiom-planner" }
axiom-prompt = { path = "crates/axiom-prompt" }
axiom-identity = { path = "crates/axiom-identity" }
axiom-kernel = { path = "crates/axiom-kernel" }
axiom-isa = { path = "crates/axiom-isa" }
axiom-resilience = { path = "crates/axiom-resilience" }
axiom-demo-taskflow = { path = "crates/axiom-demo-taskflow" }
