[package]
name = "axiom-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent development toolkit: LLM, tools, memory, planner, RAG, eval, test (fascade crate)"

[dependencies]
axiom-core = { path = "../axiom-core" }
axiom-runtime = { path = "../axiom-runtime" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
