[package]
name = "axiom-alert"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Alerting system for Axiom: thresholds, routing, escalation, silence"

[dependencies]
axiom-core = { path = "../axiom-core" }
axiom-oversight = { path = "../axiom-oversight" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
parking_lot = { workspace = true }
uuid = { workspace = true }
[build-dependencies]
archcheck = { path = "../../tools/archcheck" }
toml = "0.8"


