[package]
name = "axiom-api"
version = "0.4.0"
edition = "2021"
description = "Unified API gateway for Axiom Core runtime"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["http-proto"] }
tracing-opentelemetry = "0.33"
axum = "0.7"
futures = "0.3"

jsonwebtoken = { version = "9", features = ["default"] }
base64 = "0.22"

# P2-K1/K2: 配置管理（环境变量 + TOML 配置文件）
dotenvy = "0.15"
toml = "0.8"

axiom-kernel = { path = "../axiom-kernel" }
axiom-runtime = { path = "../axiom-runtime" }
axiom-oversight = { path = "../axiom-oversight" }
axiom-viz = { path = "../axiom-viz", features = ["metrics"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }