[package]
name = "axiom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core primitives: Cell, Signal, Lens, Axiom, Witness"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
