[package]
name = "axiom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core primitives: Cell, Signal, Lens, Axiom, Witness + Version management"
keywords = ["actor", "agent", "runtime", "audit", "distributed"]
categories = ["concurrency", "asynchronous", "architecture"]
publish = true

[features]
default = ["sha2-id", "uuid"]
sha2-id = ["dep:sha2"]
uuid = ["dep:uuid"]
unstable = []
bincode-codec = ["dep:bincode"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
futures = { workspace = true }
linkme = { workspace = true }
parking_lot = { workspace = true }
axiom-macros = { workspace = true }
axiom-kernel = { workspace = true }
dashmap = { workspace = true }
toml = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true }
linkme = { workspace = true }

[build-dependencies]
archcheck = { path = "../../tools/archcheck" }
toml = "0.8"
