[package]
name = "axiom-identity"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Identity and Skill system for axiom-core agents with progressive disclosure"

[dependencies]
axiom-core = { path = "../axiom-core" }
axiom-tool = { path = "../axiom-tool" }
axiom-prompt = { path = "../axiom-prompt" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
parking_lot = "0.12"
[build-dependencies]
archcheck = { path = "../../tools/archcheck" }
toml = "0.8"


