[package]
name = "axiom-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Minimal kernel and WASM plugin runtime for Axiom Core."
repository.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
glob = "0.3"
parking_lot = { workspace = true }
linkme = { workspace = true }
libloading = { version = "0.8", optional = true }
wasmtime = { version = "21", optional = true }
wasmtime-wasi = { version = "21", optional = true }
wasmtime-component-util = { version = "21", optional = true }
postcard = { version = "1", optional = true }
semver = { version = "1", features = ["serde"] }
tokio = { workspace = true }
serde_json = { workspace = true }
bincode = { version = "1.3", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = ["native-loader", "sha2-id"]
native-loader = ["libloading"]
wasm-loader = ["wasmtime", "wasmtime-wasi", "wasmtime-component-util", "postcard"]
bincode-codec = ["bincode"]
sha2-id = ["sha2"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
axiom-plugin-test = { path = "../axiom-plugin-test" }
