[package]
name = "axiom-llm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "LLM client abstraction for axiom-kernel - multi-provider support with retry and structured output"

[dependencies]
axiom-kernel = { path = "../axiom-kernel" }

tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
[build-dependencies]
archcheck = { path = "../../tools/archcheck" }
toml = "0.8"
