[package]
name = "axiom-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros: #[cell], #[axiom], #[signal_payload], #[schema_version], #[migration]"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
linkme = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
axiom-kernel = { path = "../axiom-kernel" }
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
axiom-tool = { path = "../axiom-tool" }

[build-dependencies]
archcheck = { path = "../../tools/archcheck" }
toml = "0.8"


