[package]
name = "axiom-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "MCP (Model Context Protocol) bridge for axiom-core"

[dependencies]
axiom-core = { path = "../axiom-core" }
axiom-runtime = { path = "../axiom-runtime" }
axiom-oversight = { path = "../axiom-oversight" }

tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
parking_lot = "0.12"
url = "2"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
uuid = { version = "1", features = ["v4"] }
[build-dependencies]
archcheck = { path = "../../tools/archcheck" }
toml = "0.8"


