[package]
name = "axiom-oversight"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Layer 0 Oversight - meta-governance: entropy, architecture compliance, intent auditing"

[dependencies]
axiom-core = { path = "../axiom-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
