[package]
name = "axiom-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tokio-based runtime with supervision tree"

[dependencies]
axiom-kernel = { path = "../axiom-kernel" }
axiom-store = { path = "../axiom-store" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }

[features]
default = []
telemetry = []
bincode-codec = ["axiom-kernel/bincode-codec"]

[build-dependencies]
archcheck = { path = "../../tools/archcheck" }
toml = "0.8"
