[package]
name = "axiom-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tokio-based runtime with supervision tree"

[dependencies]
axiom-kernel = { path = "../axiom-kernel" }
axiom-store = { path = "../axiom-store" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
sha2 = { version = "0.10" }

[features]
default = []
telemetry = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]
bincode-codec = ["axiom-kernel/bincode-codec"]

[dependencies.opentelemetry]
version = "0.32"
optional = true

[dependencies.opentelemetry_sdk]
version = "0.32"
optional = true

[dependencies.opentelemetry-otlp]
version = "0.32"
features = ["http-proto"]
optional = true

[build-dependencies]
archcheck = { path = "../../tools/archcheck" }
toml = "0.8"
