[package]
name = "axiom-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Event store abstraction with in-memory implementation"

[dependencies]
axiom-core = { path = "../axiom-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
