[package]
name = "axiom-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Event store abstraction with in-memory implementation"

[dependencies]
axiom-kernel = { path = "../axiom-kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
parking_lot = { workspace = true }
snap = "1"
tempfile = { version = "3" }
uuid = { workspace = true }

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite", "tokio/rt"]

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio-rustls", "sqlite", "chrono"]
optional = true

[build-dependencies]
archcheck = { path = "../../tools/archcheck" }
toml = "0.8"

[dev-dependencies]
proptest = { workspace = true }
loom = { workspace = true }


