[package]
name = "axiom-tool"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Type-safe tool invocation framework for axiom-core"

[dependencies]
axiom-core = { path = "../axiom-core" }

tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
[build-dependencies]
archcheck = { path = "../../tools/archcheck" }
toml = "0.8"


