[package]
name = "quick-start"
version = "0.1.0"
edition = "2021"
description = "Quick start example for Axiom Core"
license = "MIT"

[dependencies]
axiom-kernel = { path = "../../crates/axiom-kernel" }
axiom-runtime = { path = "../../crates/axiom-runtime" }
axiom-oversight = { path = "../../crates/axiom-oversight" }
axiom-api = { path = "../../crates/axiom-api" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
