[package]
name = "archcheck"
version = "0.1.0"
edition = "2021"
description = "Architecture governance checker for axiom workspace"
license = "MIT"

[lib]
name = "archcheck"
path = "src/lib.rs"

[[bin]]
name = "archcheck"
path = "src/main.rs"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
walkdir = "2"
regex = "1"
once_cell = "1"
